# cpp_core

./: CMakeLists.txt  core.hpp  core_test.cpp  test.sh
.github/workflows/: ci.yaml
.zed/: debug.json
